tests/invalid/import_from_call_non_function/main.py
from provider import value

def run_case() -> None:
    x: int = value()

if __name__ == "__main__":
    run_case()
